--- a/src/app/cart/cart-duration.html
+++ b/src/app/cart/cart-duration.html
@@ -1,10 +1,10 @@
 <div class="row">
-  <div class="col-lg-9 col-md-8 col-sm-12 col-xs-12 lr-padding lr-padding-small">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 lr-padding">
-      <h3 class="heading-text bold-font devider-bottom topmargin">How long do you need it?</h3>
+  <div class="col-lg-9 col-md-8 col-sm-12 col-xs-12 leftpadding duration-leftpadding-small">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 leftpadding">
+      <h3 class="heading-text devider-bottom topmargin">How long do you need it?</h3>
     </div>
     <!-- Enter Duration Period -->
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time duration-time lr-padding">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time duration-time leftpadding">
       <p class="desc-text">Start Renting From</p>
       <div class="form-control search-div select-date">
         <input type="text" placeholder="dd/mm/yyyy">
@@ -15,7 +15,7 @@
         <i class="fa fa-clock-o pull-right"></i>
       </div>
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time duration-time lr-padding">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time duration-time rightpadding duration-rightpadding-small leftpadding-small">
       <p class="desc-text">Return Details</p>
       <div class="form-control search-div select-date">
         <input type="text" placeholder="dd/mm/yyyy">
@@ -26,30 +26,30 @@
         <i class="fa fa-clock-o pull-right"></i>
       </div>
     </div>
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 select-date-heading lr-padding">
-      <h3 class="heading-text bold-font">1 week, 3 days <span class="desc-text">(if returned by 3PM, wednesday)</span></h3>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 select-date-heading leftpadding">
+      <h3 class="heading-text">1 week, 3 days <span class="desc-text">(if returned by 3PM, wednesday)</span></h3>
       <p class="desc-text">You can keep it longer or shorter, but the price is based on this estimated duration.</p>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot nopadding"></div>
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 lr-padding">
-      <h3 class="heading-text bold-font devider-bottom">How do you want to get it?</h3>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 leftpadding">
+      <h3 class="heading-text devider-bottom">How do you want to get it?</h3>
     </div>
     <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <input type="radio" name="get-option">
-        <span class="heading-text bold-font">Delivery and Pickup to selected Jobsite Location </span>
+        <span class="heading-text">Delivery and Pickup to selected Jobsite Location </span>
         <p class="desc-text"></p>
     </div> -->
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 leftpadding nopadding-small">
       <div class="pickup-delivery active-pickup-delivery">
         <input type="radio" name="get-option">
-        <span class="go-back-text bold-font">Pickup these items yourself</span>
+        <span class="go-back-text">Pickup these items yourself</span>
         <p class="desc-text pickup-desc">Upon compilation of this order, you will receive a confirmation email with the pickup location. Call (123) 456-7890 with any questions or concerns.</p>
       </div>
     </div>
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 nopadding-small">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 nopadding-small rightpadding">
       <div class="pickup-delivery delivery-xs">
         <input type="radio" name="get-option">
-        <span class="go-back-text bold-font">Delivery to selected Jobsite Location </span>
+        <span class="go-back-text">Delivery to selected Jobsite Location </span>
         <div class="pickup-desc">
           <i class="fa fa-map-marker color-blue heading-text"></i>
           <span class="desc-text">{{cartData.selectedJobSite.Site_Name}}</span>
