--- a/src/app/cart/cart-review.html
+++ b/src/app/cart/cart-review.html
@@ -174,9 +174,9 @@
       <p class="address2">Commercial Area, Houston-TX</p>
       <p class="zip">Zip Code: 34001</p>
       <i class="fa fa-phone-square color-blue heading-text"></i>
-      <span class="color-blue number">+1 123 456 7890</span>
+      <span class="number">+1 123 456 7890</span>
       <i class="fa fa-user color-blue heading-text"></i>
-  		<span class="color-blue">
+  		<span>
   			Contact Person
   		</span>
 		</div>
@@ -187,19 +187,19 @@
 			<h3 class="bold-font heading-text">Contact Information</h3>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 nopadding person-details">
 				<i class="fa fa-user color-blue heading-text"></i>
-	  		<span class="color-blue">
+	  		<span>
 	  			Contact Person Name
 	  		</span>
 			</div>
 			<div class="col-lg-4 col-md-5 col-sm-6 col-xs-12 nopadding person-details">
 				<i class="fa fa-envelope-o color-blue heading-text"></i>
-	  		<span class="color-blue">
+	  		<span>
 	  			ankit.jiwani92@gmail.com
 	  		</span>
 			</div>
 			<div class="col-lg-4 col-md-3 col-sm-12 col-xs-12 nopadding person-details">
 				<i class="fa fa-phone-square color-blue heading-text"></i>
-	  		<span class="color-blue">
+	  		<span>
 	  			+1 123 456 7890
 	  		</span>
 			</div>
@@ -210,11 +210,11 @@
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding jobsite-details-col request-date-col">
 			<h3 class="bold-font heading-text">Date</h3>
 			<p>
-				<span class="bold-font desc-text">Start Date & Time:</span>&nbsp
+				<span class="bold-font"><i class="fa fa-clock-o color-blue"></i>&nbsp Start Date & Time:</span>&nbsp
 				<span>01/16/2016 12:00 PM</span>
 			</p>
 			<p>
-				<span class="bold-font desc-text">End Date & Time:</span>&nbsp
+				<span class="bold-font"><i class="fa fa-clock-o color-blue"></i>&nbsp End Date & Time:</span>&nbsp
 				<span>01/29/2016 12:00 PM</span>
 			</p>
 		</div>
@@ -233,22 +233,22 @@
 	<div class="col-lg-4 col-md-4 col-sm-5 col-xs-12 total-price">
     <div class="text-left total-price-padding">
       <h3 class="desc-text">
-        <label>Sub-Total Rental:</label>
+        <span>Sub-Total Rental:</span>
         <span class="pull-right">$13,847</span>
       </h3>
-      <h3 class="desc-text">
-        <label>Environmental Fee:</label>
+      <h3 class="desc-text topmargin">
+        <span>Environmental Fee:</span>
         <span class="pull-right">$13,847</span>
       </h3>
-      <h3 class="desc-text">
-        <label>Equipment Protection Program:</label>
+      <h3 class="desc-text topmargin">
+        <span>Equipment Protection Program:</span>
         <span class="pull-right">$13,847</span>
       </h3>
-      <h3 class="desc-text">
-        <label>Taxes:</label>
+      <h3 class="desc-text topmargin">
+        <span>Taxes:</span>
         <span class="pull-right">$13,847</span>
       </h3>
-      <h3 class="desc-text bold-font">
+      <h3 class="desc-text bold-font topmargin">
         <label>Total:</label>
         <span class="pull-right">$13,847</span>
       </h3>
