--- a/src/app/cart/cart-update-jobsite.html
+++ b/src/app/cart/cart-update-jobsite.html
@@ -95,13 +95,13 @@
         <div class="col-md-6 other-col lr-padding">
           <input type="text" placeholder="Address" class="form-control" ng-model="address.locality">
         </div>
-        <div class="col-md-6 other-col lr-padding">
+        <div class="col-md-6 other-col rightpadding addjob-left-padding">
           <input type="text" placeholder="State" class="form-control" ng-model="address.administrative_area_level_1">
         </div>
         <div class="col-md-6 other-col lr-padding">
           <input type="text" placeholder="Zip Code" class="form-control" ng-model="address.postal_code">
         </div>
-        <div class="col-md-6 other-col lr-padding">
+        <div class="col-md-6 other-col rightpadding addjob-left-padding">
           <input type="text" placeholder="Phone" class="form-control" ng-model="address.phone">
         </div>
         <div class="col-md-12 other-col lr-padding" id="searchbox">
