--- a/src/app/equipment-reserve-success/equipment.reserve-success.html
+++ b/src/app/equipment-reserve-success/equipment.reserve-success.html
@@ -6,8 +6,9 @@
       <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 sell-main-part">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 req_job_tit nopadding reserve-success-heading req-confirm heading-text">Request Confirmation</div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-right nopadding req-confirm">
-          <button type="button" class="btn sign_mybtn all-btn primary-btn reserve-success-btn">Print Order Details</button>
-          <a type="button" class="btn sign_mybtn all-btn primary-btn reserve-success-btn" ui-sref="hm.orderHistory">View Orders</a>
+          <a class="color-blue" ui-sref="hm.orderHistory"><i class="fa fa-print color-blue"></i>&nbsp Print Order Details</a>
+          &nbsp &nbsp
+          <a class="color-blue" ui-sref="hm.orderHistory"><i class="fa fa-eye color-blue"></i>&nbsp View Orders</a>
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot bord_dash_bot_small border-dashed"></div>
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 req_mar nopadding">
@@ -24,32 +25,32 @@
 
             <tbody>
             <tr>
-              <td class="req_tabal_lf desc-text">Request ID: </td>
+              <td class="req_tabal_lf desc-text bold-font">Request ID: </td>
               <td class="desc-text">5784-BD245</td>
 
             </tr>
             <tr>
-              <td class="req_tabal_lf desc-text">Full Name:  </td>
+              <td class="req_tabal_lf desc-text bold-font">Full Name:  </td>
               <td class="desc-text">Hemag Brosnan</td>
 
             </tr>
             <tr>
-              <td class="req_tabal_lf desc-text">Email Address:  </td>
+              <td class="req_tabal_lf desc-text bold-font">Email Address:  </td>
               <td class="desc-text">john@doe.com</td>
 
             </tr>
             <tr>
-              <td class="req_tabal_lf desc-text">Job Site Address:   </td>
+              <td class="req_tabal_lf desc-text bold-font">Job Site Address:   </td>
               <td class="desc-text">353 Third Floor Avenue</td>
 
             </tr>
             <tr>
-              <td class="req_tabal_lf desc-text">City:  </td>
+              <td class="req_tabal_lf desc-text bold-font">City:  </td>
               <td class="desc-text">Washington DC Area</td>
 
             </tr>
             <tr>
-              <td class="req_tabal_lf desc-text">ZIP Code:  </td>
+              <td class="req_tabal_lf desc-text bold-font">ZIP Code:  </td>
               <td class="desc-text">23308</td>
 
             </tr>
@@ -87,7 +88,7 @@
             Our team advisors are 24/7 at your service to
             help you.
           </p>
-          <p class="help_clr"><a href="#" class="">customercare@nobleiron.com</a></p>
+          <p class="help_clr"><a href="mailto:customercare@nobleiron.com" class="">customercare@nobleiron.com</a></p>
           <p class="skype_tex"><i class="fa fa-phone"></i>
             1-855-767-4424</p>
         </div>
@@ -96,19 +97,19 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 shell_with">
           <h2 class="need_title">Why Sell with us?</h2>
           <ul>
-            <li><i class="fa fa-check-circle"></i>
+            <li><i class="fa fa-check color-blue"></i>
               <a href="">USP point to go here go here go here</a></li>
-            <li><i class="fa fa-check-circle"></i>
+            <li><i class="fa fa-check color-blue"></i>
               <a href="">USP point to go here go here go here</a></li>
-            <li><i class="fa fa-check-circle"></i>
+            <li><i class="fa fa-check color-blue"></i>
               <a href="">USP point to go here go here go here</a></li>
-            <li><i class="fa fa-check-circle"></i>
+            <li><i class="fa fa-check color-blue"></i>
               <a href="">USP point to go here go here go here</a></li>
-            <li><i class="fa fa-check-circle"></i>
+            <li><i class="fa fa-check color-blue"></i>
               <a href="">USP point to go here go here go here</a></li>
-            <li><i class="fa fa-check-circle"></i>
+            <li><i class="fa fa-check color-blue"></i>
               <a href="">USP point to go here go here go here</a></li>
-            <li><i class="fa fa-check-circle"></i>
+            <li><i class="fa fa-check color-blue"></i>
               <a href="">USP point to go here go here go here</a></li>
 
           </ul>
