--- a/src/app/my-catalogue/my-catalogue.html
+++ b/src/app/my-catalogue/my-catalogue.html
@@ -5,13 +5,13 @@
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 my-bottm-line manage_job_tit manage_job_tit_small">
         My Catalog
       </div>
-      <div ng-show="catelogFetchInProgress" class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right my-bottm-line dash_board_tit manage_job_tit_small">
+        <a class="dash_board_light invoice-no" href="#/">Home </a> <i class="fa fa-chevron-right desc-text color-blue"></i> <span class="dash_board_bold">Catalog</span>
+      </div>
+      <div ng-show="catelogFetchInProgress" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <load-indicator loading="catelogFetchInProgress"></load-indicator>
       </div>
       <div ng-style="{'visibility': catelogFetchInProgress ? 'hidden':'visible'}">
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right my-bottm-line dash_board_tit manage_job_tit_small">
-        <a class="dash_board_light invoice-no" href="#/">Home </a>/ <span class="dash_board_bold">Catalog</span>
-      </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
         <div ng-show="!catelog.length" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pull-center">
           <h3 class="heading-text cart-empty pull-center">
