--- a/src/app/styles/custom.css
+++ b/src/app/styles/custom.css
@@ -377,3 +377,7 @@ html, body {
   height:200px;
 }
 
+
+.datetime-picker-dropdown > li.date-picker-menu div > table .btn-default {
+  border: 0;
+}
