--- a/src/app/quotes-detail/quotes-detail.html
+++ b/src/app/quotes-detail/quotes-detail.html
@@ -29,15 +29,15 @@
           <i class="fa fa-map-marker marker"></i>
           <span>Bay Area, Houstan</span>
         </td>
-        <td class="quantity vertically-middle">
-          <p class="desc-text pull-center qty">1</p>
+        <td class="vertically-middle">
+          <p class="desc-text">1</p>
         </td>
         <td class="duration vertically-middle">
           <p>12 Dec, 2015 - 23:00</p>
           <p class="to">to</p>
           <p>14 Dec, 2015 - 11:30</p>
         </td>
-        <td class="vertically-middle pricing">$3556</td>
+        <td class="vertically-middle pull-center pricing">$3556</td>
       </tr>
       <tr>
         <td class="vertically-middle">
@@ -48,15 +48,15 @@
           <i class="fa fa-map-marker marker"></i>
           <span>Bay Area, Houstan</span>
         </td>
-        <td class="quantity vertically-middle">
-          <p class="desc-text pull-center qty">1</p>
+        <td class="vertically-middle">
+          <p class="desc-text">1</p>
         </td>
         <td class="duration vertically-middle">
           <p>12 Dec, 2015 - 23:00</p>
           <p class="to">to</p>
           <p>14 Dec, 2015 - 11:30</p>
         </td>
-        <td class="vertically-middle pricing">$3556</td>
+        <td class="vertically-middle pull-center pricing">$3556</td>
       </tr>
       <tr>
         <td class="vertically-middle">
@@ -67,15 +67,15 @@
           <i class="fa fa-map-marker marker"></i>
           <span>Bay Area, Houstan</span>
         </td>
-        <td class="quantity vertically-middle">
-          <p class="desc-text pull-center qty">1</p>
+        <td class="vertically-middle">
+          <p class="desc-text">1</p>
         </td>
         <td class="duration vertically-middle">
           <p>12 Dec, 2015 - 23:00</p>
           <p class="to">to</p>
           <p>14 Dec, 2015 - 11:30</p>
         </td>
-        <td class="vertically-middle pricing">$3556</td>
+        <td class="vertically-middle pull-center pricing">$3556</td>
       </tr>
       </tbody>
     </table>
