--- a/src/app/cart/cart-snapshot.html
+++ b/src/app/cart/cart-snapshot.html
@@ -1,4 +1,4 @@
-<div class="col-lg-3 col-md-4 col-sm-12 col-xs-12 cart-summary-col hidden-sm hidden-xs">
+<div class="col-lg-3 col-md-4 col-sm-12 col-xs-12 cart-summary-col hidden-sm hidden-xs inner-scroll">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 my-bottm-line shopping-cart-heading nopadding bold-font"><i class="fa fa-shopping-cart"></i>&nbsp
     Cart Summary
   </div>
