user profile ui changes with responsive active catalog icon arrow sizes

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -15,7 +15,7 @@
                 <span class="sidebar-heading">Dashboard</span>
               </a>
             </li>
-            <li ui-sref-active="active" class="nomargin" ng-click="closeFilter()"><a ui-sref="hm.dashboard.myCatalogue">
+            <li ui-sref-active="active" class="nomargin catalog-active" ng-click="closeFilter()"><a ui-sref="hm.dashboard.myCatalogue">
               <i class="fa fa-heart my-verti-icon catelog-icon"></i>
               <span class="sidebar-heading">My Catalog</span></a>
             </li>
