--- a/src/app/dashboard-main/dashboard-main.html
+++ b/src/app/dashboard-main/dashboard-main.html
@@ -7,7 +7,7 @@
         DASHBOARD
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit manage_job_tit_small">
-        <a href="#/" class="dash_board_light invoice-no">Home </a> <i class="fa fa-chevron-right desc-text color-blue"></i> <span class="dash_board_bold">Dashboard</span>
+        <a href="#/" class="dash_board_light invoice-no">Home </a> <i class="fa fa-chevron-right icon-text color-blue"></i> <span class="dash_board_bold">Dashboard</span>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 job-ste-box job-ste-box-small">
