--- a/src/app/equipment-detail/equipment-detail.html
+++ b/src/app/equipment-detail/equipment-detail.html
@@ -9,15 +9,15 @@
         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 procuct_bor_bot noopad_mobile">
           <div class="product_menu">
             <ul>
-              <li><a ui-sref="hm.search.results" class="nopadding">Home </a> <i class="fa fa-chevron-right desc-text color-blue"></i></li>
-              <li><a ui-sref="hm.search.results({category_id : equipment.Category_Id})" class="nopadding">{{equipment.Category_Name}}</a> <i class="fa fa-chevron-right desc-text color-blue"></i></li>
+              <li><a ui-sref="hm.search.results" class="nopadding">Home </a> <i class="fa fa-chevron-right icon-text color-blue"></i></li>
+              <li><a ui-sref="hm.search.results({category_id : equipment.Category_Id})" class="nopadding">{{equipment.Category_Name}}</a> <i class="fa fa-chevron-right icon-text color-blue"></i></li>
               <li class="active">{{equipment.Product_Name}}</li>
 
             </ul>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 procuct_bor_bot text-right go_back noopad_mobile">
-          <a ui-sref="hm.search.results({category_id : equipment.Category_Id})"> <i class="fa fa-chevron-left"></i> Go Back</a>
+          <a ui-sref="hm.search.results({category_id : equipment.Category_Id})"> <i class="fa fa-chevron-left icon-text"></i> Go Back</a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 prodetil_main">
           <div class="col-lg-2 col-md-2 nopadding">
