--- a/src/app/my-catalogue/my-catalogue.html
+++ b/src/app/my-catalogue/my-catalogue.html
@@ -10,7 +10,7 @@
           My Catalog
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right my-bottm-line dash_board_tit manage_job_tit_small">
-          <a class="dash_board_light invoice-no" href="#/">Home </a> <i class="fa fa-chevron-right desc-text color-blue"></i> <span class="dash_board_bold">Catalog</span>
+          <a class="dash_board_light invoice-no" href="#/">Home </a> <i class="fa fa-chevron-right icon-text color-blue"></i> <span class="dash_board_bold">Catalog</span>
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
         <div ng-show="!catelog.length" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pull-center">
