--- a/src/app/user-profile/user-profile.html
+++ b/src/app/user-profile/user-profile.html
@@ -51,7 +51,7 @@
 			Profile Settings
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
 			<ul class="nav nav-tabs gride-tab root-category">
 				<li class="active">
 					<a tabtoggle data-toggle="tab" href="#profile-details">Profile Details</a>
@@ -65,8 +65,8 @@
 			</ul>
 		</div>
 		<!-- Profile Details -->
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active" id="profile-details">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list profile-setting">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 update-exist tab-pane fade in active nopadding" id="profile-details">
+			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list profile-setting leftpadding toppadding profile-leftpadding-small">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 inputs-div">
 					<div class="form-control search-div">
 						<input type="text" placeholder="First Name">
@@ -138,11 +138,11 @@
 		</div>
 
 		<!-- Portal Settings -->
-		<div id="portal-settings" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane fade update-exist">
+		<div id="portal-settings" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane fade update-exist nopadding profile-lrpadding-small">
 			<div class="row fields-row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding">
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 site-col job-site-list profile-setting">
-						<h3 class="desc-text bold-font">Portal Credentials</h3>
+						<h3 class="desc-text bold-font topmargin">Portal Credentials</h3>
 						<div class="form-control search-div">
 							<input type="text" placeholder="Email">
 							<i class="fa fa-envelope-o"></i>
@@ -187,7 +187,7 @@
 		</div>
 
 		<!-- Security -->
-		<div id="security" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane fade update-exist">
+		<div id="security" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tab-pane fade update-exist nopadding profile-lrpadding-small">
 			<div class="row fields-row">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 site-col job-site-list profile-setting">
 					<div class="form-control search-div security-input">
